--- a/notebooks/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
+++ b/notebooks/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
@@ -260,7 +260,10 @@
     "\n",
     "A diagram says more than a 1000 words:\n",
     "\n",
-    "<img src=\"../Images/SelectionSort.png\" alt=\"drawing\" width=\"80%\"/>"
+    "```{figure} Images/SelectionSort.png\n",
+    ":width: 80%\n",
+    "```\n",
+    "<img src=\"./Images/SelectionSort.png\" alt=\"drawing\" width=\"80%\"/>"
    ]
   },
   {
