--- a/notebooks/coding/jupyter_book_guide.ipynb
+++ b/notebooks/coding/jupyter_book_guide.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "## Figures\n",
     "\n",
-    "### Figures from github repository\n",
+    "### Figures from github repository (does not work locally!)\n",
     "To add figure from github repository, use following syntax:\n",
     "\n",
     "````\n",
