--- a/_sources/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
+++ b/_sources/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
@@ -256,14 +256,13 @@
     "\n",
     "2) Now consider all elements behind the first index\n",
     "\n",
-    "3) Find the minimum of this sublist and swap it with the first element (of the sublist)\n",
+    "3) Find the minimum of this sublist and swap it with the first element (of the sublist)S\n",
     "\n",
     "A diagram says more than a 1000 words:\n",
     "\n",
     "```{figure} Images/SelectionSort.png\n",
-    ":width: 80%\n",
-    "```\n",
-    "<img src=\"./Images/SelectionSort.png\" alt=\"drawing\" width=\"80%\"/>"
+    ":width: 60%\n",
+    "```\n"
    ]
   },
   {
