--- a/_sources/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
+++ b/_sources/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
@@ -34,7 +34,9 @@
     "\n",
     "\\\\[f(n) \\leq c * g(n)\\\\] for all \\\\(n \\geq n_0\\\\).\n",
     "\n",
-    "\\\\(g(n)\\\\) can be thought of as an *upper bound* of \\\\(f(n)\\\\) as \\\\(n\\\\) tends to infinity. Here are a couple of examples:\n",
+    "\\\\(g(n)\\\\) can be thought of as an *upper bound* of \\\\(f(n)\\\\) as \\\\(n\\\\) tends to infinity. In some publications *big Theta* notation is used. \\\\(\\Theta(n)\\\\) can be considered the *least upper bound*, in algorithm analysis we ofter use both notations interchangeably.\n",
+    "\n",
+    "Here are a couple of examples:\n",
     "\n",
     "\\\\[ 3n + 4 = O(n)\\\\]\n",
     "\\\\[ n^2 + 17n = O(n^2)\\\\]\n",
@@ -260,9 +262,144 @@
     "\n",
     "A diagram says more than a 1000 words:\n",
     "\n",
-    "```{figure} Images/SelectionSort.png\n",
+    "```{figure} algo_images/SelectionSort.png\n",
     ":width: 60%\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "If we calculate the sum of operations (arithmetic series) we get \\\\(\\frac{n*(n+1)}{2} = O(n^2)\\\\). Selection Sort is considered a rather inefficient sorting algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Adding Matrices:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4, 4, 4], [4, 4, 4], [4, 4, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Adds two square matrices of the same size\n",
+    "def addMatrix(A,B):\n",
+    "    res = []\n",
+    "    for i in range(len(A)):\n",
+    "        temp = []\n",
+    "        for j in range(len(A[i])):\n",
+    "            \n",
+    "            temp.append(A[i][j] + B[i][j])\n",
+    "            \n",
+    "        res.append(temp)\n",
+    "        \n",
+    "    return res\n",
+    "            \n",
+    "        \n",
+    "print(addMatrix([[1,2,3],[1,2,3],[1,2,3]],[[3,2,1],[3,2,1],[3,2,1]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we want to add two matrices of side lenght \\\\(n\\\\), we have to access all of the cells in the matrix, therefore perform \\\\(n^2\\\\) additions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------\n",
+    "## Different Complexities \n",
+    "Apart from the three complexities, there are many more which show up quite often. The most notable ones are (we will discuss some of them later)\n",
+    "\n",
+    "1) Logarythmic \\\\(O(log(n))\\\\) - present in e.g. Binary Search. \n",
+    "\n",
+    "2) Loglinear \\\\(O(n*log(n))\\\\) - e.g. Merge Sort.\n",
+    "\n",
+    "3) Multi-variable \\\\(O(n*k)\\\\) - e.g. searching for a substing of length \\\\(k\\\\) in a string of length \\\\(n\\\\).\n",
+    "\n",
+    "4) Exponential \\\\(O(a^n)\\\\), \\\\(a > 1\\\\) - this is bad.\n",
+    "\n",
+    "5) Factorial \\\\(O(n!)\\\\) - even worse (producing all permutations of a string)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------------\n",
+    "## Best, Worst and Average Case Runtimes\n",
+    "\n",
+    "While analyzing algorithms, it is worth considering how the program behaves based on different inputs. \n",
+    "\n",
+    "* Best-case runtime complexity is a function defined by the minimum number of steps taken on any input. \n",
+    "* Worst-case runtime complexity considers the maximum number of steps taken by the algorithm.\n",
+    "* Average case runtime complexity is probably the most accurate measure of the performance of an algorithm and takes into accout the behaviour of the program when feeded with an *average* input.\n",
+    "\n",
+    "In production, both worst and average runtime complexities are considered (imagine an algorithm with an average \\\\(O(n^2)\\\\) and worst case \\\\(O(n!)\\\\) - that could be easliy exploited!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us now perform an analysis on a simple search algorithm which finds the number \\\\(x\\\\) in a list \\\\(l\\\\)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simpleSearch(x,l):\n",
+    "    for i in range(len(l)):\n",
+    "        if x == l[i]:\n",
+    "            return i\n",
+    "    return -1\n",
+    "            \n",
+    "print(simpleSearch(1,[3,4,5,6,7,1,23,4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our assumption is that \\\\(x\\\\) is in the list and that the probability that it is at a particulair index is uniform.\n",
+    "\n",
+    "1) Best-case: \\\\(O(1)\\\\) - in is the zeroth cell\n",
+    "\n",
+    "2) Worst-case: \\\\(O(n)\\\\) - have to go through the whole list\n",
+    "\n",
+    "3) Average case: \\\\(O(\\frac{n}{2}) = O(n)\\\\) - the element will be *somewhere in the middle*\n",
+    "\n",
+    "In this case, we can predict that the program will run in linear time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------\n",
+    "## Exercises\n"
    ]
   },
   {
