--- a/_sources/mathematics/math_methods_1/Multivariable_Calculus.ipynb
+++ b/_sources/mathematics/math_methods_1/Multivariable_Calculus.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [],
    "source": [
     "## This cell just imports necessary modules\n",
     "import numpy as np\n",
-    "from sympy import sin, cos, Function, Symbol, diff, integrate, exp\n",
+    "from sympy import sin, cos, Function, Symbol, diff, integrate, exp, pi\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
     "%matplotlib inline\n",
@@ -16,14 +20,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###### FIRST PARTIAL DERIVATIVES ######\n",
-    "###### Lecture 2, slide 10 ######\n",
+    "# Multivariable calculus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First partial derivatives\n",
     "\n",
+    "Lecture 2, slide 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first partial derivative of V w.r.t. h is:  pi*r**2\n",
+      "The first partial derivative of V w.r.t. r is:  2*pi*h*r\n"
+     ]
+    }
+   ],
+   "source": [
     "# Define the independent variables using Symbol\n",
     "r = Symbol('r')\n",
     "h = Symbol('h')\n",
@@ -38,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "tags": [
      "hide-input"
@@ -79,14 +105,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###### SECOND PARTIAL DERIVATIVES ######\n",
-    "###### Lecture 2, slide 12 ######\n",
+    "## Second partial derivatives\n",
     "\n",
+    "Lecture 2, slide 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first partial derivatives of f = (x**2)*sin(y) are: \n",
+      "f_x =  2*x*sin(y)\n",
+      "f_y =  x**2*cos(y)\n",
+      "The second partial derivatives of f = (x**2)*sin(y) are: \n",
+      "f_xx =  2*sin(y)\n",
+      "f_xy =  2*x*cos(y)\n",
+      "f_yy =  -x**2*sin(y)\n",
+      "f_yx =  2*x*cos(y)\n",
+      "\n",
+      "f_xy = f_yx\n"
+     ]
+    }
+   ],
+   "source": [
     "x = Symbol('x')\n",
     "y = Symbol('y')\n",
     "f = (x**2)*sin(y)\n",
@@ -117,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "hide-input"
@@ -198,13 +251,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###### CHAIN RULE ######\n",
-    "###### Lecture 2, slide 19 ######\n",
+    "## Chain rule\n",
+    "\n",
+    "Lecture 2, slide 19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Differentiating T = 3*y*sin(x) wrt t using the chain rule:\n",
+      "3*a*b*t*cos(a*t) + 3*b*sin(a*t)\n"
+     ]
+    }
+   ],
+   "source": [
     "a = Symbol('a')\n",
     "b = Symbol('b')\n",
     "t = Symbol('t')\n",
@@ -220,13 +289,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###### DEFINITE AND INDEFINITE INTEGRALS ######\n",
-    "###### Lecture 2, slide 21 ######\n",
+    "## Definite and indefinite integrals\n",
+    "\n",
+    "Lecture 2, slide 21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integrating cos(x) yields: sin(x)\n",
+      "Integrating 2*x between x=0 and x=2 yields: 4\n"
+     ]
+    }
+   ],
+   "source": [
     "x = Symbol('x')\n",
     "y = Symbol('y')\n",
     "\n",
@@ -245,14 +330,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###### DOUBLE INTEGRALS ######\n",
-    "###### Lecture 2, slide 26 ######\n",
+    "## Double integrals\n",
     "\n",
+    "Lecture 2, slide 26"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The inner integral is:  4*x**2\n",
+      "The outer integral is:  32/3\n"
+     ]
+    }
+   ],
+   "source": [
     "# The function we want to integrate.\n",
     "f = 2*(x**2)*y\n",
     "\n",
@@ -267,9 +367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integral of f w.r.t x and y is:  x**3*y**2/3\n"
+     ]
+    }
+   ],
    "source": [
     "x = Symbol('x')\n",
     "y = Symbol('y')\n",
@@ -282,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "tags": [
      "hide-input"
