add hide input tags

--- a/notebooks/mathematics/math_methods_1/Multivariable_Calculus.ipynb
+++ b/notebooks/mathematics/math_methods_1/Multivariable_Calculus.ipynb
@@ -67,7 +67,7 @@
    "execution_count": 15,
    "metadata": {
     "tags": [
-     "hide-input"
+     "hide_input"
     ]
    },
    "outputs": [
@@ -173,7 +173,7 @@
    "execution_count": 17,
    "metadata": {
     "tags": [
-     "hide-input"
+     "hide_input"
     ]
    },
    "outputs": [
@@ -393,7 +393,7 @@
    "execution_count": 22,
    "metadata": {
     "tags": [
-     "hide-input"
+     "hide_input"
     ]
    },
    "outputs": [
