--- a/notebooks/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
+++ b/notebooks/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "(algorythmic_complexity)=\n",
-    "# Algorithmic Complexity\n",
+    "# Algorithmic complexity\n",
     "``` {index} Algorithmic Complexity\n",
     "```\n",
     "\n",
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Big Oh Notation\n",
+    "## Big Oh notation\n",
     "\n",
     "The mathematical definiton of this concept can be found [**here**](https://primer-computational-mathematics.github.io/book/mathematics/mathematical_notation/Big_O_notation.html). In simple terms, we say that:\n",
     "\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "source": [
     "----------------\n",
-    "### Constant Time \\\\(O(1)\\\\)\n",
+    "### Constant time \\\\(O(1)\\\\)\n",
     "\n",
     "An algorithm is said to run in *constant* time if its complexity is \\\\(O(1)\\\\). This is usually considered the *fastest* case (which is true, but only in the *asymptotic* sense). No matter what the input size is, the program will take the same amount of time to terminate. Let us consider some examples:\n",
     "\n",
@@ -157,7 +157,7 @@
    "metadata": {},
    "source": [
     "----------------\n",
-    "### Linear Time \\\\(O(n)\\\\)\n",
+    "### Linear time \\\\(O(n)\\\\)\n",
     "\n",
     "This complexity appears in real-life problems much more frequently than the constant time. The program is said to run in *linear* time if the time it takes is proportional to the input size:"
    ]
@@ -205,7 +205,7 @@
    "metadata": {},
    "source": [
     "----------------\n",
-    "### Quadratic Time \\\\(O(n^2)\\\\)\n",
+    "### Quadratic time \\\\(O(n^2)\\\\)\n",
     "The *quadratic* time complexity is also a very popular case. It often might not be the most efficient solution and can point to better complexities such as \\\\(O(n*log(n))\\\\). However, there are problems in which such traversal is necessary. "
    ]
   },
@@ -319,7 +319,7 @@
    "metadata": {},
    "source": [
     "------------------\n",
-    "## Different Complexities \n",
+    "## Different complexities \n",
     "Apart from the three complexities, there are many more which show up quite often. The most notable ones are (we will discuss some of them later)\n",
     "\n",
     "1) Logarythmic \\\\(O(log(n))\\\\) - present in e.g. Binary Search. \n",
@@ -338,7 +338,7 @@
    "metadata": {},
    "source": [
     "----------------\n",
-    "## Best, Worst and Average Case Runtimes\n",
+    "## Best, worst and average case runtimes\n",
     "\n",
     "While analyzing algorithms, it is worth considering how the program behaves based on different inputs. \n",
     "\n",
