--- a/_sources/z_extra_resources_for_researchers/Camera_Calibration.ipynb
+++ b/_sources/z_extra_resources_for_researchers/Camera_Calibration.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Cam_Calib)=\n",
+    "\n",
     "# Camera calibration\n",
     "\n",
     "Cameras introduce distortions into our data, these arise for various reasons such as the SSD, focal length, lens distortions, etc. Perhaps the most obvious is when using a fish-eye lens, this allows for a wider area to be captured however introduces large distortions near the image edges. \n",
@@ -275,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
