Algo Complexity content done, still need to adjust style

--- a/notebooks/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
+++ b/notebooks/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
@@ -403,6 +403,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Which Big Oh** category do these functions fall into (least upper bound):\n",
+    "\n",
+    "1) \\\\( 4n^3 + 2n\\\\)\n",
+    "\n",
+    "2) \\\\(\\sum_{i=0}^{n} i^2\\\\)\n",
+    "\n",
+    "3) \\\\(log(log(n))\\\\)\n",
+    "\n",
+    "4) 34562"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "1) \\\\(O(n^3)\\\\)\n",
+    "\n",
+    "2) \\\\(O(n^3)\\\\)\n",
+    "\n",
+    "3) \\\\(O(log(log(n))\\\\)\n",
+    "\n",
+    "4) \\\\(O(1)\\\\)\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------\n",
+    "* **Multiplying Matrices** We want to multiply two square matrices of side lenght \\\\(n\\\\) of the same size using the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3, 6, 9], [6, 12, 18], [9, 18, 27]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mulMatrix(A,B):\n",
+    "    \n",
+    "    C = [([0]*len(A)) for i in range(len(A))]\n",
+    "    \n",
+    "    for i in range(len(A)):\n",
+    "        for j in range(len(A)):\n",
+    "            for k in range(len(A)):\n",
+    "                C[i][j] += (A[i][k]*B[k][j])\n",
+    "                \n",
+    "    return C\n",
+    "\n",
+    "\n",
+    "print(mulMatrix([[1,1,1],[2,2,2],[3,3,3]],\n",
+    "                [[1,2,3],[1,2,3],[1,2,3]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**What is the algorythmic complexity of this algorithm?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "        \n",
+    "\\\\(O(n^3)\\\\)\n",
+    " \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------\n",
+    "* **Insertion Sort** algorithm works according to the steps:\n",
+    "\n",
+    "1) Take the minimum element from the list and swap it with the first element.\n",
+    "\n",
+    "2) Now elements before index 1 are sorted\n",
+    "\n",
+    "3) Take the minimum element from the unsorted portion of the list and put it at an appropriate position in the sorted portion.\n",
+    "\n",
+    "4) Repeat utill the whole list is sorted.\n",
+    "\n",
+    "The following GIF should be helpful:\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/9/9c/Insertion-sort-example.gif\" width=\"80%\">\n",
+    "\n",
+    "Source: [Wikimedia Commons](https://upload.wikimedia.org/wikipedia/commons/9/9c/Insertion-sort-example.gif)\n",
+    "\n",
+    "**What is the algorythmic complexity of this algorithm?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "        \n",
+    "\\\\(O(n^2)\\\\)\n",
+    " \n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
