Algo complexity finished

--- a/notebooks/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
+++ b/notebooks/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.ipynb
@@ -16,16 +16,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, say we want to add two \\\\(n\\\\)-bit binary digits. One way to do this is to go bit by bit and add the two. We can se that \\\\(n\\\\) operations are involved. \n",
+    "Now, say we want to add two \\\\(n\\\\)-bit binary digits. One way to do this is to go bit by bit and add the two. We can see that \\\\(n\\\\) operations are involved. \n",
     "\\\\[T(n) = c*n\\\\]\n",
-    "where \\\\(c\\\\) is time it takes to add two bits on a machine. On different machines the value of \\\\(c\\\\) may vary, but the linearity of this function is the common factor. Our aim is to abstract away from the details of implementation and think about the fundamental usage of computing resources. "
+    "where \\\\(c\\\\) is the time it takes to add two bits on a machine. On different machines, the value of \\\\(c\\\\) may vary, but the linearity of this function is the common factor. Our aim is to abstract away from the details of implementation and think about the fundamental usage of computing resources. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Big Oh notation\n",
+    "## Big O notation\n",
     "\n",
     "The mathematical definiton of this concept can be found [**here**](https://primer-computational-mathematics.github.io/book/mathematics/mathematical_notation/Big_O_notation.html). In simple terms, we say that:\n",
     "\n",
@@ -57,7 +57,7 @@
     "----------------\n",
     "### Constant time \\\\(O(1)\\\\)\n",
     "\n",
-    "An algorithm is said to run in *constant* time if its complexity is \\\\(O(1)\\\\). This is usually considered the *fastest* case (which is true, but only in the *asymptotic* sense). No matter what the input size is, the program will take the same amount of time to terminate. Let us consider some examples:\n",
+    "An algorithm is said to run in *constant* time if its complexity is \\\\(O(1)\\\\). This is usually considered the *fastest* case (which is true but only in the *asymptotic* sense). No matter what the input size is, the program will take the same amount of time to terminate. Let us consider some examples:\n",
     "\n",
     "* ```Hello World!```: "
    ]
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionaries are data structures which can be queried in constant time. If we have a key, we can retireve an element instantaneously."
+    "Dictionaries are data structures which can be queried in constant time. If we have a key, we can retrieve an element instantaneously."
    ]
   },
   {
@@ -159,7 +159,7 @@
     "----------------\n",
     "### Linear time \\\\(O(n)\\\\)\n",
     "\n",
-    "This complexity appears in real-life problems much more frequently than the constant time. The program is said to run in *linear* time if the time it takes is proportional to the input size:"
+    "This complexity appears in real-life problems much more frequently than constant time. The program is said to run in *linear* time if the time it takes is proportional to the input size:"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we want to add two matrices of side lenght \\\\(n\\\\), we have to access all of the cells in the matrix, therefore perform \\\\(n^2\\\\) additions."
+    "When we want to add two matrices of side length \\\\(n\\\\), we have to access all of the cells in the matrix, therefore perform \\\\(n^2\\\\) additions."
    ]
   },
   {
@@ -344,9 +344,9 @@
     "\n",
     "* Best-case runtime complexity is a function defined by the minimum number of steps taken on any input. \n",
     "* Worst-case runtime complexity considers the maximum number of steps taken by the algorithm.\n",
-    "* Average case runtime complexity is probably the most accurate measure of the performance of an algorithm and takes into accout the behaviour of the program when feeded with an *average* input.\n",
+    "* Average case runtime complexity is probably the most accurate measure of the performance of an algorithm and takes into account the behaviour of the program when fed with an *average* input.\n",
     "\n",
-    "In production, both worst and average runtime complexities are considered (imagine an algorithm with an average \\\\(O(n^2)\\\\) and worst case \\\\(O(n!)\\\\) - that could be easliy exploited!)"
+    "In production, both worst and average runtime complexities are considered (imagine an algorithm with an average \\\\(O(n^2)\\\\) and worst-case \\\\(O(n!)\\\\) - that could be easily exploited!)"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our assumption is that \\\\(x\\\\) is in the list and that the probability that it is at a particulair index is uniform.\n",
+    "Our assumption is that \\\\(x\\\\) is in the list and that the probability that it is at a particular index is uniform.\n",
     "\n",
     "1) Best-case: \\\\(O(1)\\\\) - in is the zeroth cell\n",
     "\n",
@@ -406,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Which Big Oh** category do these functions fall into (least upper bound):\n",
+    "* **Which Big O** category do these functions fall into (least upper bound):\n",
     "\n",
     "1) \\\\( 4n^3 + 2n\\\\)\n",
     "\n",
@@ -440,7 +440,7 @@
    "metadata": {},
    "source": [
     "------\n",
-    "* **Multiplying Matrices** We want to multiply two square matrices of side lenght \\\\(n\\\\) of the same size using the following code:"
+    "* **Multiplying Matrices** We want to multiply two square matrices of side length \\\\(n\\\\) of the same size using the following code:"
    ]
   },
   {
@@ -505,7 +505,7 @@
     "\n",
     "3) Take the minimum element from the unsorted portion of the list and put it at an appropriate position in the sorted portion.\n",
     "\n",
-    "4) Repeat utill the whole list is sorted.\n",
+    "4) Repeat untill the whole list is sorted.\n",
     "\n",
     "The following GIF should be helpful:\n",
     "\n",
@@ -529,11 +529,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "-------\n",
+    "## References:\n",
+    "\n",
+    "* Victor S.Adamchik, CMU, 2009 [Algorythmic Complexity](https://www.cs.cmu.edu/~adamchik/15-121/lectures/Algorithmic%20Complexity/complexity.html)\n",
+    "\n",
+    "* Adrian Mejia, Medium, 2018 [8 time complexity examples that every programmer should know](https://medium.com/@amejiarosario/8-time-complexity-examples-that-every-programmer-should-know-171bd21e5ba) "
+   ]
   }
  ],
  "metadata": {
