--- a/notebooks/coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/notebooks/coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -28,6 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## My first git repo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
